cmake_minimum_required (VERSION 3.0)

project(Examples)

# Add sub directories
add_subdirectory(StereoCameraDemo)
add_subdirectory(Disparity2Real3dDemo)
add_subdirectory(Disparity2RGBDemo)
add_subdirectory(FirmwareUpdateDemo)
add_subdirectory(GetCameraParamDemo)
add_subdirectory(GetCompoundDemo)
add_subdirectory(GetLaneExtDemo)
add_subdirectory(DisplayFramesDemo)
